Uppfærði PI fylki svo það sé fyrir einn leikmann

--- a/Teymisverkefni_2.ipynb
+++ b/Teymisverkefni_2.ipynb
@@ -495,21 +495,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "source": [
         "'''\n",
         "from scipy import sparse\n",
         "import tqdm\n",
         "N = 2**32-1\n",
-        "PI = sparse.csr_matrix((2, N), dtype=int)\n",
+        "PI = sparse.csr_matrix((1, N), dtype=int)\n",
         "for key, value in tqdm.tqdm(V.items()):\n",
         "    PI[0, key] = -value\n",
-        "    PI[1, key] = -value # Því Tómas tekur argmax\n",
         "\n",
         "sparse.save_npz(\"Teymi5.npz\", PI)\n",
         "'''"
       ],
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "  0%|          | 0/118682 [00:00<?, ?it/s]/opt/homebrew/Caskroom/miniforge/base/lib/python3.9/site-packages/scipy/sparse/_index.py:82: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
+            "  self._set_intXint(row, col, x.flat[0])\n",
+            "100%|██████████| 118682/118682 [02:00<00:00, 987.38it/s]\n"
+          ]
+        }
+      ],
       "metadata": {}
     },
     {
