--- a/verk3/Tomas/SS.ipynb
+++ b/verk3/Tomas/SS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing area for SequenceActorTomas.py"
+    "## Testing area for SS.py"
    ]
   },
   {
@@ -17,6 +17,97 @@
    "source": [
     "from SS import SequenceEnv\n",
     "env = SequenceEnv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.load_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model0 = env.model[0]\n",
+    "model1 = env.model[1]\n",
+    "model2 = env.model[2]\n",
+    "model3 = env.model[3]\n",
+    "\n",
+    "torch.save(model0, './b1_trained.pth')\n",
+    "torch.save(model1, './w1_trained.pth')\n",
+    "torch.save(model2, './b2_trained.pth')\n",
+    "torch.save(model3, './w2_trained.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[====================] Finished 10000 episodes\n",
+      "training: [5291, 4709]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 1: [996, 4]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 2: [8, 992]\n",
+      "[====================] Finished 10000 episodes\n",
+      "training: [5322, 4678]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 1: [994, 6]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 2: [6, 994]\n",
+      "[====================] Finished 10000 episodes\n",
+      "training: [5306, 4694]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 1: [996, 4]\n",
+      "[====================] Finished 1000 episodes\n",
+      "greedy 2: [6, 994]\n",
+      "[==============="
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_73984/2182892042.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mwins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepisodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'training: {wins}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mwins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpolicy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'greedy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'random'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepisodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'greedy 1: {wins}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SS.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, episodes, verbose)\u001b[0m\n\u001b[1;32m    482\u001b[0m                 \u001b[0my_sigmoid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    483\u001b[0m                 \u001b[0mnew_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_sigmoid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 484\u001b[0;31m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    485\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SS.py\u001b[0m in \u001b[0;36mmake_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    313\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_moves\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m             \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 315\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlegal_moves\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    316\u001b[0m                 \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlegal_moves\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m                 \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlookahead_attributes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlegal_moves\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcards_on_board\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SS.py\u001b[0m in \u001b[0;36mlookahead_attributes\u001b[0;34m(self, pos, card, disc)\u001b[0m\n\u001b[1;32m    198\u001b[0m         \u001b[0mold_hand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m         \u001b[0mold_sequence_discs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequence_discs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m         \u001b[0mold_sequences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequences\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mold_attributes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattributes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SS.py\u001b[0m in \u001b[0;36mis_terminal\u001b[0;34m(self, i, j)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# Horizontal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m         \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mt1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtemp_board\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m             \u001b[0mt1\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "  wins = env.learn(episodes=10000, verbose=True)\n",
+    "  print(f'training: {wins}')\n",
+    "  wins = env.learn2(policy=('greedy', 'random'), episodes=1000, verbose=True)\n",
+    "  print(f'greedy 1: {wins}')\n",
+    "  wins = env.learn2(policy=('random', 'greedy'), episodes=1000, verbose=True)\n",
+    "  print(f'greedy 2: {wins}')"
    ]
   },
   {
@@ -35,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tomas/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SequenceActorTomas.py:265: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/home/tomas/Forritun/Python/IÐN102M/Teymi5-TV2/verk3/Tomas/SS.py:227: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  delta = torch.tensor(delta, dtype = torch.float, device=self.device)\n"
      ]
     },
@@ -43,66 +134,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===================] Finished 100 episodes\n",
-      "training: [44, 54]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [31, 18]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [20, 30]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [52, 47]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [34, 16]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [23, 27]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [49, 47]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [26, 23]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [28, 21]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [52, 46]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [32, 17]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [21, 29]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [43, 53]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [31, 19]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [22, 27]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [55, 43]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [20, 29]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [26, 24]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [52, 47]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [22, 28]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [23, 25]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [54, 45]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [27, 20]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [22, 28]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [47, 47]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [29, 21]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [23, 27]\n",
-      "[====================] Finished 100 episodes\n",
-      "training: [39, 58]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 1: [27, 22]\n",
-      "[====================] Finished 50 episodes\n",
-      "greedy 2: [27, 22]\n"
+      "===================] Finished 1000 episodes\n",
+      "training: [501, 474]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [251, 241]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [278, 209]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [528, 455]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [307, 187]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [241, 249]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [479, 506]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [330, 164]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [199, 293]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [538, 453]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [392, 106]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [118, 375]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [482, 518]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [447, 49]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [52, 447]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [548, 452]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [477, 22]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [37, 462]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [509, 491]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [482, 18]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [15, 485]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [540, 460]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [494, 6]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [13, 487]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [535, 465]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [492, 8]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [7, 493]\n",
+      "[====================] Finished 1000 episodes\n",
+      "training: [513, 487]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 1: [497, 3]\n",
+      "[====================] Finished 500 episodes\n",
+      "greedy 2: [7, 493]\n"
      ]
     }
    ],
